--- a/backend/package.json
+++ b/backend/package.json
@@ -4,17 +4,25 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "ts-node-dev --respawn --transpileOnly --ignore-watch node_modules --no-notify src/server.ts",
-    "test": "jest",
+    "dev": "NODE_ENV=dev ts-node-dev --respawn --transpile-only --ignore-watch node_modules --no-notify src/server.ts",
+    "test": "NODE_ENV=test jest",
     "knex:migrate": "knex --knexfile knexfile.ts migrate:latest",
-    "knex:rollback": "knex --knexfile knexfile.ts migrate:rollback",
-    "knex:seed": "knex --knexfile knexfile.ts seed:run"
+    "knex:rollback": "NODE_ENV=dev knex --knexfile knexfile.ts migrate:rollback",
+    "knex:seed": "NODE_ENV=dev knex --knexfile knexfile.ts seed:run",
+    "knex:make": "NODE_ENV=dev knex --knexfile knexfile.ts migrate:make"
   },
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.17.1"
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
+    "knex": "^0.95.6",
+    "pg": "^8.6.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.10",
+    "@types/express": "^4.17.12",
+    "@types/uuid": "^8.3.0",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.3.5"
   }
