--- a/backend/package.json
+++ b/backend/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "dev": "NODE_ENV=dev ts-node-dev --respawn --transpile-only --ignore-watch node_modules --no-notify src/server.ts",
     "test": "NODE_ENV=test jest",
-    "knex:migrate": "knex --knexfile knexfile.ts migrate:latest",
-    "knex:rollback": "NODE_ENV=dev knex --knexfile knexfile.ts migrate:rollback",
+    "knex:latest": "knex --knexfile knexfile.ts migrate:latest",
+    "knex:rollback": "knex --knexfile knexfile.ts migrate:rollback",
     "knex:seed": "NODE_ENV=dev knex --knexfile knexfile.ts seed:run",
     "knex:make": "NODE_ENV=dev knex --knexfile knexfile.ts migrate:make"
   },
