--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "scripts": {
     "dev": "NODE_ENV=dev ts-node-dev --respawn --transpile-only --ignore-watch node_modules --no-notify src/server.ts",
-    "test": "NODE_ENV=test jest",
+    "test": "NODE_ENV=test jest --detectOpenHandles",
     "knex:latest": "knex --knexfile knexfile.ts migrate:latest",
     "knex:rollback": "knex --knexfile knexfile.ts migrate:rollback",
     "knex:seed": "NODE_ENV=dev knex --knexfile knexfile.ts seed:run",
@@ -15,13 +15,18 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "jest": "^27.0.6",
     "knex": "^0.95.6",
     "pg": "^8.6.0",
+    "supertest": "^6.1.3",
+    "ts-jest": "^27.0.3",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/cors": "^2.8.10",
     "@types/express": "^4.17.12",
+    "@types/jest": "^26.0.23",
+    "@types/supertest": "^2.0.11",
     "@types/uuid": "^8.3.0",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.3.5"
