--- a/backend/package.json
+++ b/backend/package.json
@@ -4,6 +4,9 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
+    "build-ts": "tsc",
+    "postinstall": "npm run build-ts",
+    "start": "node dist/src/server.js",
     "dev": "NODE_ENV=dev ts-node-dev --respawn --transpile-only --ignore-watch node_modules --no-notify src/server.ts",
     "test": "NODE_ENV=test jest --detectOpenHandles",
     "knex:latest": "knex --knexfile knexfile.ts migrate:latest",
