--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,11 +10,13 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/react-google-recaptcha": "^2.1.2",
     "antd": "^4.16.6",
     "axios": "^0.21.1",
     "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-google-recaptcha": "^2.1.0",
     "react-icons": "^4.2.0",
     "react-modal": "^3.14.3",
     "react-router-dom": "^5.2.0",
